@@ -1,3 +1,9 @@
+Sun May 27 20:38:30 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
+
+	* Copy SILC Plugin's libfe_common_silc.so to libfe_silc.so so
+	  that user's don't have to do it manually.  Affected file
+	  is apps/irssi/src/fe-common/silc/core/Makefile.am.
+
 Thu May 24 15:30:31 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
 
 	* SILC Toolkit 1.1 Beta4.
